# docs/swagger.yaml
@@ -20,6 +20,19 @@ definitions:
       is_response:
         type: boolean
     type: object
+  models.EditRoute:
+    properties:
+      distance:
+        type: integer
+      from:
+        type: string
+      into:
+        type: string
+      is_response:
+        type: boolean
+      price:
+        type: integer
+    type: object
   models.GetRoutes:
     properties:
       all_price:
@@ -57,18 +70,12 @@ definitions:
     type: object
   models.Route:
     properties:
-      all_price:
-        type: integer
       distance:
         type: integer
       from:
         type: string
       into:
         type: string
-      is_response:
-        type: boolean
-      price:
-        type: integer
     type: object
   models.SwagSignIn:
     properties:
@@ -373,7 +380,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/models.Route'
+          $ref: '#/definitions/models.EditRoute'
       produces:
       - application/json
       responses:
